(Eevee) The objects form a collection disappear when I disable the collection and then renable it. #67162

Closed
opened 2019-07-18 11:40:40 +02:00 by Kostis Lymperakis · 11 comments

System Information
Operating system: Windows
Graphics card: GeForce Nvidia 1050

Blender Version
Broken: blender-2.80rc1-windows64

Short description of error
When i disable a collection and then renable it the objects from the collection disappear. I tried to restart blender, but it didn't work. Thet only happens when i'm working with eevee and when i'm not in the render view with cycles. But when i tried it with an empty project, it work. Have in mind that this project is an animation project.

Exact steps for others to reproduce the error
blender file: character.blend
video: 2019-07-18 12-38-27.mp4

**System Information** Operating system: Windows Graphics card: GeForce Nvidia 1050 **Blender Version** Broken: blender-2.80rc1-windows64 **Short description of error** When i disable a collection and then renable it the objects from the collection disappear. I tried to restart blender, but it didn't work. Thet only happens when i'm working with eevee and when i'm not in the render view with cycles. But when i tried it with an empty project, it work. Have in mind that this project is an animation project. **Exact steps for others to reproduce the error** blender file: [character.blend](https://archive.blender.org/developer/F7616155/character.blend) video: [2019-07-18 12-38-27.mp4](https://archive.blender.org/developer/F7616197/2019-07-18_12-38-27.mp4)

Added subscriber: @kostis1101

Added subscriber: @kostis1101
Member

Added subscribers: @dfelinto, @lichtwerk

Added subscribers: @dfelinto, @lichtwerk
Member

This is because you are in Local View (View > Local View > Toggle Local View).

Seems like excluding a collection from a viewlayer will clear the localview flags of participating objects/bases and these dont get restored if the collection comes back into the viewlayer. Maybe they should not be cleared? (would have to check further...)
I think this has been reported before [will dig for a duplicate report], otherwise @dfelinto might know more...

This is because you are in `Local View` (`View` > `Local View` > `Toggle Local View`). Seems like excluding a collection from a viewlayer will clear the localview flags of participating objects/bases and these dont get restored if the collection comes back into the viewlayer. Maybe they should not be cleared? (would have to check further...) I think this has been reported before [will dig for a duplicate report], otherwise @dfelinto might know more...
Dalai Felinto was assigned by Philipp Oeser 2019-07-18 12:38:30 +02:00
Member

Cant find the duplicate, @dfelinto: could you pick it up?

Cant find the duplicate, @dfelinto: could you pick it up?

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Hi thanks for the report, but I will have to close it for now. The file is far from simple (73MB) and odds are the issue was already fixed.

If the problem persist with the official stable blender2.80 or a night build (builder.blender.org) please open a new report with a simplified file.

Hi thanks for the report, but I will have to close it for now. The file is far from simple (73MB) and odds are the issue was already fixed. If the problem persist with the official stable blender2.80 or a night build (builder.blender.org) please open a new report with a simplified file.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Added subscriber: @brecht

Added subscriber: @brecht

Actually I'm wondering what is the intended behaviour here. I think it should be ok to have new unexcluded objects to be visible in all local views by default.

@brecht any thoughts?

Actually I'm wondering what is the intended behaviour here. I think it should be ok to have new unexcluded objects to be visible in all local views by default. @brecht any thoughts?

This issue was referenced by 8cb8853ebc

This issue was referenced by 8cb8853ebcf61d07fd863cd45e79e1d55db8fe5d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67162
No description provided.