Make new objects (from enabled collections or append) visible to local views

This fix T67162.